--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -6,4 +6,10 @@
         <h1>Student Registration Page</h1>
     </head>
 
+    <form>
+        <label for="StName">Student Name: </label>
+        <input type="text" name="StName" id="StName" placeholder="Enter Your Name">
+        <br><br>
+        
+    </form>
 </html>
