CGPA section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -10,6 +10,10 @@
         <label for="StName">Student Name: </label>
         <input type="text" name="StName" id="StName" placeholder="Enter Your Name">
         <br><br>
+
+        <label for="StCG">Student CGPA: </label>
+        <input type="number" name="StCG" id="StCG" placeholder="Enter Your CGPA">
+        <br><br>
         
     </form>
 </html>
