Gender section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -14,6 +14,13 @@
         <label for="StCG">Student CGPA: </label>
         <input type="number" name="StCG" id="StCG" placeholder="Enter Your CGPA">
         <br><br>
+
+        <label for="GenderMale">Male </label>
+        <input type="radio" name="Gender" id="GenderMale" value="Male">
+        <br><br>
+        <label for="GenderFemale">Female </label>
+        <input type="radio" name="Gender" id="GenderFemale" value="Female">
+        <br><br>
         
     </form>
 </html>
