--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -21,6 +21,15 @@
         <label for="GenderFemale">Female </label>
         <input type="radio" name="Gender" id="GenderFemale" value="Female">
         <br><br>
-        
+
+        <label for="Dept">Select Department: </label>
+        <select>
+            <option value="CSE">CSE </option>
+            <option value="CSE">EEE </option>
+            <option value="CSE">ENGLISH </option>
+            <option value="CSE">LAW </option>
+        </select>
+        <br><br>
+
     </form>
 </html>
