Student ID section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -31,5 +31,9 @@
         </select>
         <br><br>
 
+        <label for="StID">Student ID </label>
+        <input type="text" name="StID" id="StID">
+        <br><br>
+
     </form>
 </html>
