--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -35,5 +35,9 @@
         <input type="text" name="StID" id="StID">
         <br><br>
 
+        <label for="Address">Address: </label>
+        <textarea name="Address" id="Address" rows="4" cols="28" placeholder="Enter your address here"></textarea>
+        <br><br>
+
     </form>
 </html>
