DOB section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -39,5 +39,9 @@
         <textarea name="Address" id="Address" rows="4" cols="28" placeholder="Enter your address here"></textarea>
         <br><br>
 
+        <label for="DOB">Date of Birth: </label>
+        <input type="date" name="DOB" id="DOB">
+        <br><br>
+
     </form>
 </html>
