Email section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -42,6 +42,10 @@
         <label for="DOB">Date of Birth: </label>
         <input type="date" name="DOB" id="DOB">
         <br><br>
+        
+        <label for="Email">Email: </label>
+        <input type="text" name="Email" id="Email" placeholder="Enter your email">
+        <br><br>
 
     </form>
 </html>
