Grade Section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -42,9 +42,13 @@
         <label for="DOB">Date of Birth: </label>
         <input type="date" name="DOB" id="DOB">
         <br><br>
-        
+
         <label for="Email">Email: </label>
         <input type="text" name="Email" id="Email" placeholder="Enter your email">
+        <br><br>
+
+        <label for="Grade">Upload your Grade Report: </label>
+        <input type="file" name="Grade" id="Grade">
         <br><br>
 
     </form>
