Terms and Conditions section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -51,5 +51,9 @@
         <input type="file" name="Grade" id="Grade">
         <br><br>
 
+        <label for="T&C">I agree to the terms and conditions </label>
+        <input type="checkbox" name="T&C" id="T&C">
+        <br><br>
+
     </form>
 </html>
