Phone number section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -55,5 +55,9 @@
         <input type="checkbox" name="T&C" id="T&C">
         <br><br>
 
+        <label for="Phone">Phone Number: </label>
+        <input type="text" name="Phone" id="Phone" placeholder="Enter your phone number">
+        <br><br>
+
     </form>
 </html>
