Submit section added.

--- a/Lab 1/regpage.html
+++ b/Lab 1/regpage.html
@@ -59,5 +59,9 @@
         <input type="text" name="Phone" id="Phone" placeholder="Enter your phone number">
         <br><br>
 
+        <label for="Submit">Submit your information </label>
+        <br>
+        <input type="Submit" name="Submit" id="Submit">
+
     </form>
 </html>
